--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "connect": "3.6.6",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "6.7.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
     "husky": "^8.0.0",
